--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "8afe93e3-271d-47b9-a189-06e1e05af9e3"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
